<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizSolutionActivity">

    <LinearLayout
        android:id="@+id/linearLayoutanswer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/elo_of_question"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/current_Elo2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/stardardelo"
            android:textSize="16sp" />


    </LinearLayout>

    <TextView
        android:id="@+id/answer_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayoutanswer"
        android:layout_margin="8dp"
        android:text="@string/answer" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_below="@id/answer_text"
        android:layout_alignBottom="@id/bottomLayout">


        <TextView

            android:id="@+id/realAnswer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </ScrollView>

    <LinearLayout
        android:id="@+id/bottomLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:text="@string/solved"
            android:onClick="QuizWasSolved"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:text="@string/unsolved"
            android:onClick="QuizWasUnsolved"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

</RelativeLayout>