<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuizActivity">

    <include layout="@layout/toolbar"
        android:id="@+id/toolbar"/>

    <LinearLayout
        android:layout_below="@id/toolbar"
        android:id="@+id/linearlayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8sp"
            android:text="@string/current_elo"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/current_Elo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8sp"
            android:text="@string/stardardelo"
            android:textSize="16sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/questiondoublepoint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearlayout1"
        android:layout_margin="8dp"
        android:text="@string/ques" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/linearlayout2"
        android:layout_below="@id/questiondoublepoint"
        android:layout_margin="8dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
            android:layout_alignParentTop="true"
            android:id="@+id/question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/quiz_question_image"
            android:layout_margin="8dp"
            android:layout_below="@id/question"
            android:layout_width="match_parent"
            android:layout_height="800dp" />

        </RelativeLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/linearlayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="showAnswer"
            android:layout_weight="1"
            android:text="@string/show_answer" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="showNextQuestion"
            android:layout_weight="1"
            android:text="@string/next_answer" />
    </LinearLayout>

</RelativeLayout>