<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FlashcardsChangeActivity">
    <ScrollView
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/linearChangeFlash3">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/linearChangeFlash"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <include
                    android:id="@+id/toolbar"
                    layout="@layout/toolbar"/>

                <TextView
                    android:layout_width="match_parent"
                    android:text="@string/ques"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/detail_question"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"/>

                <TextView
                    android:text="@string/answer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/detail_answer"
                    android:textSize="18sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">
                    <TextView
                        android:text="@string/current_elo"
                        android:layout_margin="8dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/detail_elo"
                        android:layout_width="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/stardardelo"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <RadioGroup
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">
                    <RadioButton
                        android:id="@+id/radio_unsolved"
                        android:layout_margin="8dp"
                        android:layout_width="wrap_content"
                        android:text="@string/unsolved"
                        android:layout_height="wrap_content" />
                    <RadioButton
                        android:id="@+id/radio_solved"
                        android:layout_width="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/solved"
                        android:layout_height="wrap_content" />

                </RadioGroup>

            </LinearLayout>

            <android.support.constraint.ConstraintLayout
                android:layout_below="@id/linearChangeFlash"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.constraint.Guideline
                    android:id="@+id/guideline_changecard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.5" />

                <ImageView
                    android:id="@+id/question_image1"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_margin="4dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="8dp"
                    android:onClick="startFullscreen"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/answer_image1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/answer_image1"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_margin="4dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="8dp"
                    android:onClick="startFullscreen"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/guideline_changecard"
                    app:layout_constraintTop_toTopOf="parent" />
            </android.support.constraint.ConstraintLayout>

        </RelativeLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/linearChangeFlash3"
        android:layout_above="@id/linearChangeFlash2"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <Button
            android:layout_weight="1"
            android:onClick="startQuestionFoto1"
            android:layout_width="wrap_content"
            android:text="@string/picture_of_question"
            android:layout_height="wrap_content" />

        <Button
            android:layout_width="wrap_content"
            android:onClick="startAnswerFoto1"
            android:text="@string/picture_of_answer"
            android:layout_weight="1"
            android:layout_height="wrap_content" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearChangeFlash2"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/detail_finish"
            android:onClick="saveChanges"
            android:layout_weight="1"
            android:text="@string/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/detail_delete"
            android:onClick="deleteFlashcard"
            android:text = "@string/delete"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</RelativeLayout>